--- a/Service.Phone2Passport.API/Service.Phone2Passport.API.csproj
+++ b/Service.Phone2Passport.API/Service.Phone2Passport.API.csproj
@@ -18,6 +18,6 @@
     <ProjectReference Include="..\Service.Phone2Passport.Business\Service.Phone2Passport.Business.csproj" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
