--- a/Service.Phone2Passport.API/Properties/launchSettings.json
+++ b/Service.Phone2Passport.API/Properties/launchSettings.json
@@ -30,9 +30,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger"
     }
   }
 }
