--- a/Service.Phone2Passport.Business/Service.Phone2Passport.Business.csproj
+++ b/Service.Phone2Passport.Business/Service.Phone2Passport.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Service.Phone2Passport.DataAccess\Service.Phone2Passport.DataAccess.csproj" />
   </ItemGroup>
 
